# mathproj

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  PRD.txt  README.md  TRD.txt  UI.txt  app.js  index.html  package.json  styles.css
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md  architecture.md  performance.md  troubleshooting.md
mathproj/: PRD.txt  TRD.txt  UI.txt  problem.txt
pca-compressor/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.sh
pca-compressor/.github/workflows/: ci.yml  release.yml
pca-compressor/crates/pca-cli/: Cargo.toml
pca-compressor/crates/pca-cli/src/: main.rs
pca-compressor/crates/pca-core/: Cargo.toml
pca-compressor/crates/pca-core/src/: compression.rs  eigen_analysis.rs  error.rs  image.rs  lib.rs  metrics.rs  orientation.rs  pca.rs  tile.rs
pca-compressor/crates/pca-gui/: Cargo.toml
pca-compressor/crates/pca-gui/src/: main.rs
pca-compressor/crates/pca-gui/src-tauri/: tauri.conf.json
pca-compressor/crates/pca-gui/src-ui/: app.js  index.html  styles.css
pca-compressor/crates/pca-py/: Cargo.toml
pca-compressor/crates/pca-py/src/: lib.rs
pca-compressor/docs/: API.md  QUICKSTART.md
pca-compressor/python-proto/: pca_compressor.py
pca-compressor/tests/: common.rs  integration_test.rs  performance_test.rs
profile/: README.md
web/: app.js  index.html  styles.css
