[workspace]
members = ["crates/pca-core", "crates/pca-cli", "crates/pca-py", "crates/pca-gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PCA Compressor Team"]
license = "MIT"
repository = "https://github.com/yourusername/pca-compressor"

[workspace.dependencies]
# Core dependencies
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
nalgebra = "0.32"
rayon = "1.8"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Image/EXIF
kamadak-exif = "0.5"

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
csv = "1.3"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# GUI
tauri = { version = "1.5", features = [] }

# Testing
assert_approx_eq = "1.1"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 2
