[package]
name = "pca-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
pca-core = { path = "../pca-core" }
tauri = { version = "1.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
rayon.workspace = true
image = { workspace = true }
base64 = "0.21"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]